tests/errors/compiler/no_rightbr_in_printf/test_2.c
int main()
{
	printf("%i",10; 
	//;
	return 0;
}